# PatientManager

./: .env.example  .eslintignore  .gitignore  .oxlintrc.json  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  biome.json  index.html  justfile  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/.sqlx/: query-006d2245e50460f664716e1269987244939f77e0cf03f5eb8f077e5bbf689f70.json  query-00703706861c22e41a31fcea1c85c65876a14244511f291208e6ba6dafcdde5d.json  query-018c5e8dd6caf4ae9edd30faa763df5841c01a3bb1f878e8d35d90db564d2db8.json  query-03e07d5704c5426644ed9aa11a0a05bab742d93691e07ef62159302bdd8af8d8.json  query-0c227ae9c9a4aa2268f2cdaba6478bb0a58863a675c5996ef9509d9372e4c7b3.json  query-0cc8328dd51360c24c36daf95d37cf5b99de68c42c0acdabc9b7cc7d3583b07f.json  query-0e44aa6453fd8e84023743d75b4d689ffcbb28e6a0ddbefbd663d5817f6c31ae.json  query-185192dbbba3f57fddcbf61833c2eac414b6e63695c1d32d42eb20d8a4efb06e.json  query-1ef11feca84c289a6226138013eb17646adfcb89d9f156f143cb78dda7a3d455.json  query-202715883f02b6b833ed1875669ac3c254a67566378befa7235e62e332da13e3.json  query-203fa0a58f38ee6b37c3b65a3ee5d5f3358b6110b36b7a834d68f0fa8036fe18.json  query-20bf150186beb2bb48cbf03beebc68b10a9b757fb65a00d12d4d1aa23ab0f8f0.json  query-210d8f602e6274ed7e72e3d57ef5b5c8d2a6e07beb97114b29d787460a450ddf.json  query-25f27bb676855d60a5c58f2aa442eaf944953540482c70f0b420aff150234e8c.json  query-28c1a379031cdf79256e0117e04ab3c06d483f48966e3fa0d07b8791736b2d43.json  query-2929513e7659b569169e48ce343fcd62fcc9c7b9f4233bcd4a693473af5f02df.json  query-292ed6382b374d649575713c76a8e061407cb901747ff648d77ba19f19de70e0.json  query-293b364a41d5c27d5bca9518fd2f2e721494bb95ac7b45817bc18259d0bf3911.json  query-36917a17f7d664486a78c807b94d784a0b41b55a2534dbba1b7201ff820a4c6b.json  (+65 more)
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
(+448 files in other folders)
